--- a/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
+++ b/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
@@ -49,7 +49,7 @@
         </div>
     
         <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
-            <button (click)="export(true)" class="btn btn-lg btn-block btn_submit">Export</button>
+            <button (click)="export(true)"  [disabled]="isExporting" class="btn btn-lg btn-block btn_submit">Export</button>
         </div>
         <!-- <div class="col-md-2 btn_search">
             <button (click)="export(false)" class="btn btn-lg btn-block btn_submit">{{'btn.report' | translate }}</button>
