--- a/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
+++ b/src/app/main/report/report-contract-send-email/report-contract-send-email.component.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
-      <button class="btn btn-lg btn-block btn_submit" (click)="exportEmailReportCall(true)">Export</button>
+      <button class="btn btn-lg btn-block btn_submit" (click)="exportEmailReportCall(true)" [disabled]="isExporting" >Export</button>
     </div>
   </div>
 
