--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -72,7 +72,7 @@
         </div>
     
         <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
-            <button (click)="export(true)"  class="btn btn-lg btn-block btn_submit">Export</button>
+            <button (click)="export(true)" [disabled]="isExporting"  class="btn btn-lg btn-block btn_submit">Export</button>
         </div>
     </div>
     
