--- a/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
+++ b/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
-      <button class="btn btn-lg btn-block btn_submit" (click)="exportSmsReportCall(true)">Export</button>
+      <button class="btn btn-lg btn-block btn_submit" (click)="exportSmsReportCall(true)" [disabled]="isExporting" >Export</button>
     </div>
   </div>
 
